--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -1,4 +1,3 @@
-
 h5
 {
 	font-weight:lighter;
@@ -9,7 +8,6 @@ h1,h2
 {
 	font-weight:400;
 }
-
 
 body
 {
@@ -91,6 +89,8 @@ body
 	border-radius: 0 0 5px 5px;
 	padding: 2px 10px;
 }
+
+#pages{ min-height: 250px;}
 
 #questions
 {
