--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -239,8 +239,12 @@ footer li
 {
 	display:none;
 	min-height:300px;
-	background-color:#ddd;
 	margin:10px 0;
+}
+#disqus-controls{
+
+height: 50px;
+
 }
 
 footer
