--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -259,7 +259,7 @@ width:570px;
 
 .disqus-sort-unselected{
 
-background:#E6E6E6;
+background-color:#E6E6E6;
 
 }
 
@@ -272,7 +272,7 @@ left:455px;
 
 }
 
-#disqus-sort-recent{
+#disqus-sort-newest{
 position:absolute;
 left:350px;
 width:90px;
@@ -287,6 +287,7 @@ border-top-left-radius: 5px;
 border-top-right-radius: 5px;
 padding:5px;
 text-align:center;
+cursor:pointer;
 }
 
 
