--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -14,6 +14,15 @@ body
 	background-color:#eee;
 }
 
+ul.horizontal li
+{
+	float:left;
+}
+ul.horizontal li+li
+{
+	margin-left:35px;
+}
+
 #wbez-header
 {
 	background-color:black;
@@ -124,6 +133,18 @@ footer li
 	border-bottom: 1px dotted #777;
 	min-height:200px;
 }
+
+.archive-search
+{
+	border-top: 1px dotted #777;
+	margin-top: 20px;
+	padding-top: 10px;
+}
+.archive-search form
+{
+	margin:0;
+}
+
 .question
 {
 	height:100px;
