--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -173,6 +173,48 @@ footer li
 
 }
 
+
+.logo {
+
+	width:50px;
+	height:50px;
+	background-repeat:no-repeat;
+	background-size:50px;
+}
+
+.logo-wyncote {
+	background-image:url("../images/logos/wyncote_bw.png");
+}
+
+.logo-art-works {
+	background-image:url("../images/logos/art-works_bw.png");
+}
+.logo-macarthur {
+	background-image:url("../images/logos/macarthur_bw.gif");
+}
+.logo-cpb {
+	background-image:url("../images/logos/cpb_bw.png");
+}
+
+.logo-cpb:hover {
+	background-image:url("../images/logos/cpb_color.gif");
+}
+
+
+.logo-air {
+	background-image:url("../images/logos/air_bw.png");
+}
+.logo-localore {
+	background-image:url("../images/logos/localore_bw.png");
+}
+
+
+.logo-localore:hover {
+	background-image:url("../images/logos/localore_color.png");
+}
+
+
+
 .question.hover
 {
 	-webkit-transition: color,background-color .25s linear;
