--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -435,6 +435,18 @@ width:90px;
 
 }
 
+
+
+#disqus-guidelines{
+position:absolute;
+left:750px;
+padding-top:5px;
+width:90px;
+
+}
+
+
+
 .disqus-sort-tab{
 
 -moz-border-radius-top: 5px;
