--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -161,12 +161,12 @@ body {
 }
 
 a {
-  color: #0088cc;
+  color: #00CCFF;
   text-decoration: none;
 }
 
 a:hover {
-  color: #005580;
+  color: #00CCFF;
   text-decoration: underline;
 }
 
@@ -4082,9 +4082,7 @@ input[type="submit"].btn.btn-mini {
   padding: 5px 14px;
   background-color: #fff;
   border: 1px solid #ddd;
-  -webkit-border-radius: 15px;
-     -moz-border-radius: 15px;
-          border-radius: 15px;
+
 }
 
 .pager a:hover {
