--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -161,12 +161,12 @@ body {
 }
 
 a {
-  color: #00CCFF;
+  color: #08C;
   text-decoration: none;
 }
 
 a:hover {
-  color: #00CCFF;
+  color: #08C;
   text-decoration: underline;
 }
 
@@ -2582,9 +2582,7 @@ button.close {
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   border-color: #e6e6e6 #e6e6e6 #bfbfbf;
   border-bottom-color: #b3b3b3;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
+
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
   filter: progid:dximagetransform.microsoft.gradient(enabled=false);
   *zoom: 1;
@@ -4056,7 +4054,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .pager {
-  margin-bottom: 18px;
+  margin-bottom: 8px;
   margin-left: 0;
   text-align: center;
   list-style: none;
@@ -4079,16 +4077,20 @@ input[type="submit"].btn.btn-mini {
 
 .pager a {
   display: inline-block;
-  padding: 5px 14px;
-  background-color: #fff;
-  border: 1px solid #ddd;
+  padding: 5px 5px;
+ 	color: #666666;
+	padding-right:5px;
+
 
 }
 
 .pager a:hover {
-  text-decoration: none;
-  background-color: #f5f5f5;
+	color: #08C;
+	text-decoration:none;
 }
+
+
+
 
 .pager .next a {
   float: right;
