--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -256,6 +256,14 @@ padding-top:2px;
 	color:#999999;
 
 }
+
+.logo-zeega {
+
+	background-image:url("../images/logos/zeega_bw.png");
+
+}
+
+
 .logo-wyncote {
 	background-image:url("../images/logos/wyncote_bw.png");
 }
