--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -187,6 +187,11 @@ footer li
 	margin:0;
 }
 
+.winner{
+
+outline: solid 3px rgba(0, 136, 204, 0.5);
+}
+
 .question
 {
 	height:100px;
@@ -274,6 +279,11 @@ padding-top:2px;
 
 }
 
+
+#previous-winner-question{
+	padding-bottom: 90px;
+
+}
 
 
 .logo-wyncote {
@@ -465,11 +475,12 @@ padding-top:2px;
 
 .social{ margin-left: 2px;}
 
-#voting-date a
+
+
+#voting-date-next
 {
-	border-bottom: 2px dotted #808184;
-	float:left;
-	display:none;
+	float: right;
+	margin-right: -68px;
 }
 
 #guidelines-modal{
