--- a/css/curiouscity.css
+++ b/css/curiouscity.css
@@ -474,8 +474,8 @@ padding-top:2px;
 	float:left;
 	margin-right:10px;
 }
-}
-.badge-voting{ background-position: -50px 0;}
+
+.badge-current{ background-position: -50px 0;}
 .badge-investigated{ background-position: -100px 0;}
 .badge-answered{ background-position: -150px 0;}
 
